===============================================================================
Changes for faraday
===============================================================================


DONE:
********* version 2.00.00 (20682)
4/10/08 - fix "see inside" feature to handle magnet rotation that occurs with "show Earth"
********* version 1.05.15 (20599)
4/8/09 - strength slider for bar magnet and turbine both need to be constrained to integer values [504]
4/7/08 - no water is shown when turbine is spinning at 1 or 2 rpm [503]
********* version 1.05.14 (20577)
4/7/08 - add clock control panels to all modules of magnets-and-electromagnets
********* version 1.05.13 (20568)
4/7/08 - hide the slow hand on the clock animation as suggested by Kathy, for purposes of demonstration
********* version 1.05.12 (20556)
4/7/08 - hide clock control panel for all modules in magnet-and-compass and magnets-and-electromagnets
********* version 1.05.11 (20528)
4/3/08 - change method of rescaling the B-field visualization [490]
4/2/08 - change faraday.description
********* version 1.05.10 (20509)
4/2/08 - organize imports
4/2/08 - fix bounds problem in AbstractBFieldGraphic, needed to call setBoundsDirty when grid bounds change [351]
4/2/08 - remove AbstractBFieldGraphic.setRescalingEnabled and getRescalingEnabled, not useful, we always rescale
4/2/08 - rename CompassGridGraphic to AbstractBFieldGraphic
4/2/08 - change terminology in CompassGridGraphic, use "grid points" instead of "needle descriptors"
4/2/08 - convert CompassNeedleCache to use strategy pattern for colors
4/1/08 - create BFieldInsideGraphic, field grid inside the magnet that moves with the magnet [351]
4/1/08 - create BFieldOutsideGraphic, a specialization of CompassGridGraphic that fills the play area [351]
4/1/08 - generalize CompassGridGraphic so that it can be used for the bar magnet's internal B-field display [351]